# odoo-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  schemas.py  settings.py
.github/workflows/: docker-publish.yml
.serena/: project.yml
.serena/memories/: cicd_github_actions.md  migration_plan.md  onboarding.md  plan_update_purchase_order.md  suggested_commands.md
tools/: ocr.py  product.py  purchase.py  supplier.py
utils/: normalizer.py  odoo_client.py
